--- a/index.html
+++ b/index.html
@@ -397,7 +397,9 @@
 							<br> <b>Marriage</b>
 							<br>On Sunday, 10th May, 2015<br/>
 							Between 10 AM and 11 AM<br/>
-							Al-Ain Auditorium, Cherpulassery, Palakkad, Kerala</p>
+							at Al-Ain Auditorium <br/> Cherpulassery, Palakkad, Kerala
+						</p>
+						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1959.0022544285896!2d76.31843499999998!3d10.887261000000006!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba7d056528eaf43%3A0x5ad411d17887b12e!2sAl-Ain+Auditorium!5e0!3m2!1sen!2sin!4v1427902822715" width="600" height="350" frameborder="0" style="border:0"></iframe>
 					</div>
 					<div class="col-md-6 text-center address animated" data-animation="flipInY" data-animation-delay="600">
 						<p>
@@ -408,19 +410,6 @@
 							at Ayalur Grama Brahmana Samooham Kalyanamandapam<br/>
 							Near Shiva temple, Ayalur, Nemmara, Palakkad 
 						</p>
-					</div>
-					<!-- <div class="col-md-4 text-center address animated" data-animation="flipInY" data-animation-delay="700">
-						<p>
-							<i class="fa fa-phone"></i>
-							<br>
-							<b>Phone</b>
-							<br>+91 8147731798
-						</p>
-					</div> -->
-					<div class="col-md-6 col-xs-9 col-sm-6">
-						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1959.0022544285896!2d76.31843499999998!3d10.887261000000006!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba7d056528eaf43%3A0x5ad411d17887b12e!2sAl-Ain+Auditorium!5e0!3m2!1sen!2sin!4v1427902822715" width="600" height="350" frameborder="0" style="border:0"></iframe>
-					</div>
-					<div class="col-md-6 col-xs-9 col-sm-6">
 						<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1961.0291928461365!2d76.5688732!3d10.5746043!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0000000000000000%3A0x0d27c1b496fb40f0!2sAyalur+Shiva+Temple!5e0!3m2!1sen!2sin!4v1429636748528" width="600" height="350" frameborder="0" style="border:0"></iframe>
 					</div>
 				</div>
